kubernetes/shipping-service.yml
# Mendefinisikan sebuah Service untuk Shipping Service
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  labels:
    app: shipping-service
    tier: consumer
spec:
  selector: # Memilih pod berdasarkan label yang sesuai
    app: shipping-service
    tier: consumer
  ports:
    - name: http-nodejs
      port: 3001 # Mengekspos layanan pada port 3001

---
# Mendefinisikan Deployment untuk Shipping Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  labels:
    app: shipping-service
    tier: consumer
spec:
  replicas: 1 # Menjalankan satu replika dari Shipping Service
  selector:
    matchLabels:
      app: shipping-service
      tier: consumer
  template:
    metadata:
      labels:
        app: shipping-service
        tier: consumer
    spec:
      containers:
        - name: shipping-service
          image: ghcr.io/panggihdwialamsyah/shipping-service:latest # Menggunakan image dari registry
          ports:
            - containerPort: 3001 # Mengekspos port 3001 di dalam container
